fix(general): bug on iPhones fixed

--- a/src/styles/pages/homepage/contact.css
+++ b/src/styles/pages/homepage/contact.css
@@ -18,14 +18,19 @@
   transition: transform 0.3s ease;
 }
 
-/* Modifier l'input date pour safari */
-@media not all and (min-resolution: 0.001dpcm) {
-  @supports (-webkit-appearance: none) {
+/* Hack pour cibler uniquement Safari */
+@media not all and (min-resolution: 0.001dpcm) and (min-width: 0.1em) {
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
     input[type="date"] {
-      width: 100% !important;
-      padding: 0.5rem;
+      width: 100%;
+      padding: 12px;
       border-radius: 0.375rem;
       background-color: white;
+      font-size: 1rem;
+      border: 1px solid #ccc; /* Ajouter une bordure pour Safari */
+      box-sizing: border-box; /* Assurer que la largeur inclut la bordure et le padding */
+      appearance: none;
+      -webkit-appearance: none;
     }
   }
 }
