--- a/src/styles/pages/homepage/hero.css
+++ b/src/styles/pages/homepage/hero.css
@@ -73,7 +73,7 @@
       -webkit-text-size-adjust: 90%; /* Préfixe spécifique à Safari */
     }
     .h1__iphone {
-      -webkit-text-size-adjust: 85%;
+      -webkit-text-size-adjust: 83%;
     }
   }
 }
